# UVM-verification

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  setup.cfg  streamlit_app.py
.github/workflows/: ci.yml  release.yml
backend/: main.py  requirements.txt  schemas.py
backend/core/: __init__.py  pipeline_manager.py
configs/: base_config.yaml  logging.yaml  uart16550-1.5.core  uart_demo.yaml
configs/schema/: master_schema.json
docs/: UVM_TESTBENCH_REPORT_v2.1.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: ConfigEditor.tsx  Console.tsx  ErrorBoundary.js  FileViewer.tsx  Footer.js  Header.js  Header.tsx  MetricsPanel.tsx  PipelineRunner.js  PipelineVisualizer.tsx  PreviewPanel.js  YAMLForm.js
frontend/src/hooks/: useGenerationAPI.ts  usePipeline.js
frontend/src/store/: appStore.ts
frontend/src/utils/: yamlUtils.js
protocols/: apb.yaml  axi4lite.yaml  i2c.yaml  spi.yaml  uart.yaml  wishbone.yaml
scripts/: run_backend.bat  start_all.bat
src/: config.py  exceptions.py  main.py  pipeline.py
src/api/: server.py
src/data/: collector.py  core_parser.py  preprocessor.py  validators.py
src/evaluation/: coverage_analyzer.py  metrics.py  reporters.py
src/features/: extractors.py
src/generation/: engine.py  renderer.py
src/models/: advanced_code_validator.py  advanced_pattern_learner.py  advanced_rl_learner.py  base_model.py  code_validator.py  enhanced_ml_model.py  enhanced_ml_model_v2.py  learning_module.py  llm_generator.py  ml_generation_model.py  ml_utils.py  registry.py  semantic_encoder.py  similarity_index.py  spec_adapter.py  template_model.py
src/simulation/: __init__.py  base.py  icarus.py  stub_sim.py
src/tracking/: experiments.py  logger.py  mlflow_tracker.py
src/utils/: decorators.py  io_utils.py  system_utils.py
tests/: quick_v2_test.py  test_advanced_ml_v2.py  test_pipeline.py  test_protocols.py  test_schema.py
(+20 files in other folders)
