[metadata]
name = uvm-tb-generator
version = 0.2.0
description = ML-style UVM Testbench Generator
author = DV Automation Team
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml>=6.0
    jinja2>=3.0
    pydantic>=2.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
mlflow =
    mlflow>=2.0

[options.entry_points]
console_scripts =
    uvmgen = src.main:main
